# exaNBody

./: .clang-format  CMakeLists.txt  LICENSE  README.md  exanbody-config.cmake
contribs/md/snap/: CMakeLists.txt  snap_force.cu  snap_force_generic.cu  snap_force_generic_fp32.cu  snap_gen.cxx  snap_link_helper.cpp
contribs/microStamp/: CMakeLists.txt  README.txt
contribs/microStamp/potentials/: WBe_Wood_PRB2019.snapcoeff
contribs/microStamp/samples/: deterministic_lj.msp  deterministic_lj_gaussian_noise.msp  deterministic_lj_porosity.msp  deterministic_lj_uniform_noise.msp  extract_grid_ccl.msp  extract_grid_ccl_external_file.msp  lattice_external_mask.msp  lattice_orient_sphere.msp  lattice_sphere.msp  lattice_sphere_avg_ghost_update_opt.msp  lattice_sphere_deterministic.msp  lattice_sphere_from_dump.msp  lattice_sphere_pt_properties.msp  lattice_sphere_snap.msp  points_40x40x40.vtk  slicing_test.msp  snap_from_dump.msp  (+2 more)
onika/: CMakeLists.txt
onika/apps/: onikarun.cpp  trace_convert.cpp
onika/cmake/: DebugTests.cmake  GenerateBenchmarkSOATL.cmake  vecreport.cmake
onika/src/: api.cpp  batch.cpp  cmdline.cpp  dag2_stream.cpp  debug_profiler.cpp  dot_sim_graph.cpp  dot_trace_format.cpp  file_utils.cpp  global.cpp  log.cpp  log_profiler.cpp  math_utils.cpp  matrix_band_solver.cpp  mpi_parallel_stats.cpp  ompt_interface.cpp  operator.cpp  operator_factory.cpp  operator_memory_stats.cpp  operator_slot_base.cpp  operator_slot_direction.cpp  operator_slot_integer_conversion.cpp  operator_slot_resource.cpp  parallel_random.cpp  plugin.cpp  print_utils.cpp  stencil_stream.cpp  string_utils.cpp  thread.cpp  type_utils.cpp  unit_test.cpp  units.cpp  vite_operator_functions.cpp  vite_profiler.cpp  xs_data_move.cpp  yaml_utils.cpp
python/: CMakeLists.txt  PYTHON_DATA_ACCESS.md  README.md  bind_exanb_data.cpp
python/exemples/: pyexanbody_dryrun_print_operators.py  pyexanbody_dryrun_test_import_pyexanbody.py  pyexanbody_extract_particle_data.py  pyexanbody_parameter_sweep.py  pyexanbody_patch_defaults.py  pyexanbody_read_cell_values.py  pyexanbody_read_sim_stats.py  pyexanbody_reproduce_solar_system_case.py  pyexanbody_run_example.py  pyexanbody_run_main_config.py  pyexanbody_run_solar_system.py  pyexanbody_run_solar_system_msp.py
python/pyexanbody/: __init__.py  _paths.py.in
src/: CMakeLists.txt
src/amr/: CMakeLists.txt  rebuild_amr.cpp
src/analytics/: CMakeLists.txt  cc_label.cpp  cc_label.cu  grid_particle_histogram.cpp  grid_particle_slicing.cu  particle_cell_projection.cpp  write_cc_table.cpp
src/appmain/: CMakeLists.txt  app_config.h  cmdline.cpp  cmdline.h  debug_profiler.cpp  debug_profiler.h  dot_sim_graph.cpp  dot_sim_graph.h  log_profiler.cpp  log_profiler.h  main.cpp  operator_set_from_regex.h  vite_operator_functions.cpp  vite_operator_functions.h  vite_profiler.cpp  vite_profiler.h  xstampv2_config.h  yaml_config_struct.h
src/compute/: CMakeLists.txt  average_neighbors.cu  domain_volume.cpp  extract_particle_field.cpp  fluid_friction.cu  gaussian_noise.cpp  generic_op_vec3.cu  print_simulation_stats.cpp  simulation_stats.cpp  uniform_noise.cpp  vec3_typescalar_op.cu  zero_particle_force.cpp  zero_particle_force.cu
src/core/: CMakeLists.txt
src/debug/: CMakeLists.txt  check_cuda_mem_access.cpp  check_random_engine.cpp  check_values.cpp  debug_particle.cpp  debug_particle_distance.cpp  grid_stats.cpp  onika_memory_log.cpp  print_ghost_operator.cpp
src/defbox/: CMakeLists.txt  apply_xform.cpp  constant_strain_rate_xform.cpp  deformation_xform.cpp  interpolated_byparts_xform.cpp  push_vec3_1st_order_xform.cu  push_vec3_2nd_order_xform.cu
src/exanb/: CMakeLists.txt
src/extra_storage/: CMakeLists.txt  check_extra_data_storage_consistency.cpp  move_particles_es.cpp
src/grid_cell_particles/: CMakeLists.txt  extend_domain.cpp  filter_particle_region.cpp  filter_region_particle.cpp  init_rcb_grid.cpp  initialize_rcb_grid.cpp  lattice.cpp  particle_cell_projection.cpp  replicate_domain.cpp  resize_grid_cell_values.cpp  resize_particle_locks.cpp  set_cell_values.cpp  track_region_particles.cpp  track_region_particles_multiple.cpp
src/io/: CMakeLists.txt  backup_r.cpp  check_backup_r.cpp  copy_back_grid.cpp  copy_grid.cpp  grid_clear.cpp  grid_memory_compact.cpp  grid_set_particles.cpp  input_value.cpp  particle_type_add_properties.cpp  particle_type_map.cpp  particle_type_properties.cpp  particle_types.cpp  print_domain.cpp  print_ghosts_comm_scheme.cpp  print_ghosts_comm_stats.cpp  print_grid.cpp  read_cell_values.cpp  read_dump.cpp  restore_r.cpp  sim_dump_reader.cpp  write_deformed_grid_vtk.cpp  write_dump.cpp  write_grid_vtk.cpp  write_paraview.cpp  write_paraview_generic.cpp  write_plot1d.cpp  write_xyz.cpp  write_xyz_generic.cpp
src/logic/: CMakeLists.txt  boolean_and.cpp  boolean_set_operator.cpp  grid_passthru.cpp  value_greater_than.cpp
src/mesh/: CMakeLists.txt  chunk_neighbors_no_surface_crossing.cpp  grid_triangle_intersections.cpp  trimesh_collision.cu  trimesh_init.cpp  trimesh_particle_collision.cu  trimesh_particle_proximity.cu  trimesh_proximity.cu  trimesh_repulsive_wall.cu
src/mpi/: CMakeLists.txt  backup_r_lt_move_data.cpp  cost_model_fit.cpp  cpu_gpu_load_balance.cpp  duplicate_communicator.cpp  grid_clear_ghosts.cpp  load_balance_no_costs.cpp  load_balance_rcb.cpp  migrate_cell_particles.cpp  particle_displ_over.cu  particle_displ_over_async_end.cpp  simple_cost_model.cpp  subdomain_neighbors.cpp  update_force_from_ghost.cu  update_ghost_config.cpp  update_ghosts.cu  update_ghosts_cell_lists.cpp  update_ghosts_comm_scheme.cpp  update_ghosts_config.cpp
src/onika/: CMakeLists.txt
src/particle_neighbors/: CMakeLists.txt  chunk_neighbors.cpp  compute_dual_neighbors.cpp  compute_primary_neighbors.cpp  nbh_dist.cpp  verify_chunk_neighbors.cpp
src/tests/: benchmark_spin_mutex.cpp  test_field_set.cpp  test_field_set_impl.cpp  test_geometry.cpp  test_grid.cpp  test_grid_utils.h
src/tutorial/: CMakeLists.txt  array2d.h  async_block_parallel.cu  concurrent_block_parallel.cu  default_value_from_constructor_args.cpp
(+1109 files in other folders)
